Fixed up issues with page alignment and whitespace based on hits and removed extraneous CSS

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -154,6 +154,7 @@ header {
 	border-bottom-left-radius: 4px;
 }
 #pagination li:last-child a {
+	margin-right: 100px;
 	border-right: 1px solid #eee;
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
@@ -166,10 +167,10 @@ header {
 #pagination li.active a:hover {
 	cursor: default;
 }
-#pagination li.disabled a {
-	cursor: not-allowed;
+#pagination li.hidden a {
+	display: none;
 }
-#pagination li.disabled a:hover {
+#pagination li.hidden a:hover {
 	background: none;
 }
 
@@ -300,23 +301,6 @@ header {
 #no-results-message li a.remove:hover img {
 	opacity: 1;
 }
-a.clear-all {
-	font-size: 12px;
-	line-height: 1;
-	display: inline-block;
-	margin: 10px;
-	padding: 8px 12px;
-	text-decoration: none;
-	color: black;
-	border: 2px solid #ddd;
-	border-radius: 4px;
-}
-a.clear-all:hover {
-	transition: border-color .3s ease-in;
-	border-color: #999;
-}
-
-
 
 /* FOOTER
 // ------------------------- */
